<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/gambarMakan"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/gradient"
        android:contentDescription="@string/contentDisc" />

    <TextView
        android:id="@+id/namaMasakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_masakan"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambarMakan"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/detailMasakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaMasakan"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/button"
        android:layout_width="172dp"
        android:layout_height="43dp"
        android:background="@drawable/listbg"
        android:text="@string/kembali_ke_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailMasakan"
        app:layout_constraintVertical_bias="0.751" />
</androidx.constraintlayout.widget.ConstraintLayout>